Fix some bugs and add functions - Fix ctrl panel being too long and not scrollable - Add ctrl panel toggler - Change number inputs to type=number

--- a/_assets/style.scss
+++ b/_assets/style.scss
@@ -64,8 +64,12 @@ header { text-align: center; }
   }
 }
 
+#toggle:checked + .ctrls {
+  right: -335px;
+}
 
 .ctrls {
+  @include transition(.2s);
   background: #333;
   color: #fff;
   font-size: 14px;
@@ -75,10 +79,12 @@ header { text-align: center; }
   padding: 20px;
   font-weight: bold;
   position: absolute;
+  height: 100%;
+  overflow: scroll;
   hr { margin: 15px -20px }
 }
 
-input[type='text'], button {
+input[type='text'], input[type='number'], button {
   font-size: 13px;
   padding: 9px;
   line-height: 1em;
@@ -87,7 +93,7 @@ input[type='text'], button {
   border: 0;
 }
 
-input[type='text'] {
+input[type='text'], input[type='number'] {
   &.short {
     width: 50px; display: inline-block;
   }
@@ -156,6 +162,22 @@ button {
   line-height: 0;
   img { margin: 0; }
   &:empty + #output { display: none; }
+}
+
+input#toggle {
+  position: absolute;
+  top: -20px;
+}
+
+.toggle {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 6px;
+  background-color: #888;
+  cursor: pointer;
 }
 
 [data-number] {
